2008-08-14  Nikolas Coukouma <atrus@zmanda.com>
            Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c: fix mis-aligned memory accesses
	* amar-src/amar-test.c: fix test_pipe
 
2008-10-24  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Script_App.pm: New base module for script and application.
	* perl/Amanda/Script.pm: New base module for script.
	* perl/Amanda/Application.pm: New base module for application.
	* perl/Makefile.am: Add Amanda::Script_app, Amanda::Script And
				Amanda::Application.
	* application-src/generic-dumper.pl: Remove file.
	* application-src/generic-script.pl: Remove file.
	* application-src/script-email.pl: Use Amanda::Script.
	* application-src/amgtar_perl.pl: Use Amanda::Application.
	* application-src/amzfs-snapshot.pl: Use Amanda::Script.
	* application-src/Makefile.am: Remove generic-*.pl files.

2008-10-24  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Archive.swg perl/Makefile.am: add a Perl interface to
	  libamar
	* installcheck/Amanda_Archive.pl installcheck/Makefile.am: test it.

2008-10-24  Dustin J. Mitchell <dustin@zmanda.com>
	* */Makefile.am: change @AMLINT@ to $(AMLINT), similarly for
	  $(AMLINTFLAGS), and strip $(EXEEXT) from program names when running
	  lint
	* config/amanda/libs.m4: put GLIB_CFLAGS in AMANDA_CPPFLAGS

2008-10-23  Dustin J. Mitchell <dustin@zmanda.com>
	* amar-src/Makefile.am: add amar.h to noinst_HEADERS

2008-10-23  Dustin J. Mitchell <dustin@zmanda.com>
	* configure.in Makefile.am amar-src/Makefile.am: new directory
	* amar-src/amar.c amar-src/amar.h: amanda archive library
	* amar-src/amar-test.c: tests for library
	* common-src/security-util.c common-src/security-util.h
	  common-src/util.c common-src/util.h: move net_writev to
	  util.c, rename to full_writev
	* man/Makefile.am man/xml-source/amanda-archive-format.7.xml
	  man/xml-source/amanda.8.xml: new manpage to describe the format

2008-10-20 Nikolas Coukouma <atrus@zmanda.com>